fix: no-scrollbar for firefox

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,6 +66,10 @@ body {
   display: none;
 }
 
+.no-scrollbar {
+  scrollbar-width: none; // Firefox
+}
+
 ::-moz-selection {
   background-color: theme("colors.purple");
   color: #fff;
